[package]
name = "nautilus-server"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0.140"
serde_bytes = "0.11"
serde = "1.0"
rand = "0.8.5"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = ["aes"] }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api" }
bcs = "0.1.6"